Updates from ShareLaTeX

--- a/Bronnen/mendeleyimport.bib
+++ b/Bronnen/mendeleyimport.bib
@@ -107,6 +107,14 @@
     url = {https://www.visserijnieuws.nl/nieuws/japanse-visgigant-koopt-meerderheid-seafood-connection}
 }
 
+@techreport{SeafoodConnectionB.V.2013Personeelsreglement,
+    title = {{Personeelsreglement}},
+    year = {2013},
+    author = {{Seafood Connection B.V.}},
+    institution = {Seafood Connection},
+    address = {Urk}
+}
+
 @misc{Bergsma2018QuickBeheersing,
     title = {{Quick Scan interne beheersing}},
     year = {2018},
