--- a/Titelpagina/legepagina.tex
+++ b/Titelpagina/legepagina.tex
@@ -3,13 +3,13 @@
 \documentclass[10pt,a4paper,oneside]{report}
 \usepackage[utf8]{inputenc} %Codering
 \usepackage[dutch]{babel} %Taalinstelling
-\usepackage{biblatex} %Om een of andere reden wil deze TeX niet compilen zonder deze package, niet nodig
+\usepackage{biblatex} %Om een of andere reden wil deze TeX niet compilen zonder deze package, is zelf niet nodig
 \usepackage{csquotes} %Deze is ook nodig om errors tegen te gaan, hoewel hij zelf niet nodig is
 
 
 \begin{document}
 \setcounter{page}{2}
-%\thispagestyle{empty}
+%\thispagestyle{empty} %Activeer dit om het paginanummer weg te halen
 \null
 \vfill
 \begin{center}
