--- a/Titelpagina/omslag.tex
+++ b/Titelpagina/omslag.tex
@@ -1,4 +1,4 @@
-%Dit is een standalone TeX. Deze wordt gecompiled worden als main.tex een andere preamble heeft als dit bestand, bijvoorbeeld oneside op omslagpagina, twoside in main.tex
+%Dit is een standalone TeX. Deze wordt gecompiled als main.tex een andere preamble heeft als dit bestand, bijvoorbeeld oneside op omslagpagina, twoside in main.tex
 
 \documentclass[10pt,a4paper,oneside]{report}
 \usepackage[utf8]{inputenc} %Codering
