--- a/bibliografie.bib
+++ b/bibliografie.bib
@@ -139,3 +139,11 @@
     address = {Houten},
     isbn = {9789001796280}
 }
+
+@techreport{sfcreglement,
+    title = {{Personeelsreglement}},
+    year = {2013},
+    author = {{Seafood Connection B.V.}},
+    institution = {Seafood Connection},
+    address = {Urk}
+}
