--- a/Hoofdstukken/C-Inleiding.tex
+++ b/Hoofdstukken/C-Inleiding.tex
@@ -1,5 +1,6 @@
-\chapter*{Inleiding}
+\chapter*{Inleiding} %Ongenummerd hoofdstuk
 \addcontentsline{toc}{chapter}{Inleiding} %Ongenummerde chapters komen niet in de ToC, met deze code wel
-Om duidelijk de uit te voeren opdracht te definiëren en te verkennen wordt in dit verslag met een brede blik gekeken de probleemformulering, -omgeving, en er wordt onderzocht wat er concreet gaat spelen bij dit onderzoek. In samenwerking met de finance afdeling van Seafood Connection (hierna als afkorting: SFC) wordt georiënteerd op de opdrachtformulering en wordt ook de opdrachtomgeving bekeken aan de hand van een uitgebreide bedrijfsverkenning. 
+Deze afstudeeropdracht geeft antwoord op de vraag hoe de interne controle is ingericht bij Seafood Connection te Urk en hoe deze gebruikt kan worden om op een verantwoorde en navolgbare wijze om te gaan met de beschikbare geldmiddelen. In samenwerking met de finance afdeling en het management van Seafood Connection B.V. (hierna als afkorting: SFC) is kritisch gekeken naar de inrichting van de bestaande AOIB. 
 
-Om de lezer een goed beeld te geven van de opdrachtomgeving wordt eerst uitgebreid, maar doelgericht, de bedrijfsachtergrond beschreven. Vervolgens wordt de eerste stap van de onderzoekscyclus uitgewerkt volgens het model van Nel Verhoeven waar de probleemomschrijving breed en diep wordt uitgewerkt. In hoofdstuk drie wordt dit probleem omgezet in een concreet ontwerp waarin concreet wordt nagedacht over de invulling van de afstudeeropdracht- en periode. De competentieontwikkeling in hoofdstuk vier beschrijft de manier waarop de afstudeerstagiair gaat werken aan de competentie- en ontwikkelingspunten. Als slot vindt u de bronnenlijst, de bijlagen die verdiepend zijn voor dit plan, en de tijdsplanning voor de afstudeerperiode. 
+Om de lezer een goed beeld te geven van de opdrachtomgeving is eerst beknopt de bedrijfsachtergrond beschreven. 
+Deze dient als context voor hoofdstuk \ref{hoofdstuk:probleemanalyse} waarin de centrale probleemstelling is beschreven. Vervolgens is de methodiek voor het onderzoek uitgewerkt in hoofdstuk \ref{hoofdstuk:methodiek}. De resultaten die gevonden zijn aan de hand van het onderzoek komen aan de orde in hoofdstuk \ref{hoofdstuk:resultaten}. De gevormde conclusie en verdere bespreking van deze resultaten is te vinden in hoofdstuk \ref{hoofdstuk:conclusie} waarin ook de centrale hoofdvraag beantwoord is. Als slot vindt u de bronnenlijst, en de bijlagen die verdiepend bedoeld zijn voor deze rapportage. 
