--- a/Titelpagina/titelpagina.tex
+++ b/Titelpagina/titelpagina.tex
@@ -1,9 +1,9 @@
-%Dit is een standalone TeX. Deze wordt gecompiled worden als main.tex een andere preamble heeft als dit bestand, bijvoorbeeld oneside op titelpagina, twoside in main.tex
+%Dit is een standalone TeX. Deze wordt gecompiled als main.tex een andere preamble heeft als dit bestand, bijvoorbeeld oneside op titelpagina, twoside in main.tex
 
 \documentclass[10pt,a4paper,oneside]{report}
 \usepackage[utf8]{inputenc} %Codering
 \usepackage[dutch]{babel} %Taalinstelling
-\usepackage{biblatex} %Om een of andere reden wil deze TeX niet compilen zonder deze package, niet nodig
+\usepackage{biblatex} %Om een of andere reden wil deze TeX niet compilen zonder deze package, deze is niet nodig
 \usepackage{csquotes} %Deze is ook nodig om errors tegen te gaan, hoewel hij zelf niet nodig is
 
 \usepackage{graphicx}
