--- a/preamble.sty
+++ b/preamble.sty
@@ -22,27 +22,26 @@
 \usepackage{csquotes} %Quotes die Babel respecteren
 \usepackage{lastpage} %Variabele voor paginanummering (om te zeggen bijv. pagina 5 van 63)
 \usepackage{booktabs} %Tabeloptimalisatie en opmaak
-\usepackage{pdfpages} %Samenvoegen van PDF's 
+\usepackage{pdfpages} %Samenvoegen van PDF-bestanden
 \usepackage{lipsum} %Lorem ipsum
 \usepackage{color} %Tekstkleur
-\usepackage{microtype} %Tegen de underfull errors en om justifying te helpen
-\usepackage[pages=some]{background} %Achtergrondafbeeldingen bij voorwoord
+\usepackage{microtype} %Tegen de underfull errors en voor veel betere justifying
+\usepackage[pages=some]{background} %Achtergrondafbeeldingen bij voorwoord e.d.
 \usepackage{comment} %Om delen van de tekst uit te schakelen
-\usepackage{import} %Om het rapport in verschillende delen op te delen en in één bestand te importeren
 
 \usepackage[linktoc=all]{hyperref}
 \hypersetup{
-    colorlinks=true,
-    linkcolor=black,
-    filecolor=cyan,
-    urlcolor=cyan,
-    citecolor=black,
-    breaklinks=true,
-    bookmarksopen=true}
+    colorlinks=true, %Geef kleur aan links
+    linkcolor=black, %href kleur
+    filecolor=cyan, %Lokale bestanden kleur
+    urlcolor=cyan, %URL kleur bijv in bibliografie
+    citecolor=black, %Kleur van het jaartal bij verwijzing
+    breaklinks=true, %Lange URL's mogen op meerdere regels staan
+    bookmarksopen=true} %Open in het PDF-programma het beeld waar je de hoofdstukken kunt selecteren
 %Links naar websites, bronnen, inhoudsopgave, pagina's etc.
 
-\input{./Titelpagina/Definities.tex} %Alle variabelen in het document als titel, datum etc.
-\newcounter{bijlage}[section] %Om het aantal bijlages bij te houden
+\input{./Titelpagina/Definities.tex} %Alle variabelen in het document als titel, datum, naam etc.
+\newcounter{bijlage}[section] %Om het aantal bijlages bij te houden, hij telt het aantal sections waarin de counter veranderd
 
 \title{\titel}
 \author{\auteur}
