Updates from ShareLaTeX

--- a/Hoofdstukken/E-Probleemanalyse.tex
+++ b/Hoofdstukken/E-Probleemanalyse.tex
@@ -16,7 +16,7 @@ Momenteel is er nog niet een vastgelegd document omtrent de \textit{treasury} da
 Dit statuut is \textbf{intern} gericht door in kaart te brengen hoe de verschillende processen rond de financiële beheersing horen te functioneren, er wordt bijvoorbeeld beschreven wie welke functie heeft in het geld-goederenproces en welke controles daarop uitgevoerd worden. \\
 Ook is het statuut \textbf{extern} gericht aan stakeholders door de verantwoording die wordt afgelegd, door het management, over het geldbeheer. \citep{jans}
 
-In deze en volgende rapportage wordt de volgende definitie gehanteerd voor de term treasury statuut: 
+In deze rapportage wordt de volgende definitie gehanteerd voor de term treasury statuut: 
 
 \begin{displayquote}
 Het treasury statuut is een door het management opgesteld rapport waarin de bevoegdheden, verantwoordelijkheden, toezichtmaatregelen, de sturing, en beheersing geformuleerd worden ten aanzien van financiële vermogenswaarden, financiële geldstromen, financiële posities en de hieraan verbonden risico’s. \\
@@ -25,12 +25,11 @@ Het treasury statuut is een door het management opgesteld rapport waarin de bevo
 \noindent
 Zie ook \hyperlink{bij:treasury}{bijlage 1} voor een overzichtelijke uitwerking van het begrip treasury statuut.
 
-\bigskip
 De treasuryfunctie is een essentieel deel van alle primaire processen bij Seafood Connection door de grote aanwezigheid van vreemde valuta in zowel het inkoop- als verkoopproces. In figuur \ref{fig:primairproces} is te zien hoe de primaire processen verband houden met elkaar. Enkele communicatiestromen zijn hier ook weergegeven, namelijk de inkopers die voor het betalen van een levering in een andere valuta aan de finance-afdeling het verzoek sturen om euro's te verkopen voor bijvoorbeeld dollars. De verkopers vragen aan de finance-afdeling of zij vreemde valuta willen inkopen om de brutomarge vast te zetten.
 
 \begin{figure}[!hb]
     \centering
-    \includegraphics[width=0.78\textwidth]{primairproces}
+    \includegraphics[width=0.85\textwidth]{primairproces}
     \caption{Globaal overzicht van de primaire processen}
     \label{fig:primairproces}
 \end{figure}
@@ -38,14 +37,12 @@ De treasuryfunctie is een essentieel deel van alle primaire processen bij Seafoo
 Samenvattend worden de huidige bestaande organisatorische maatregelen en processen in kaart gebracht. Daarnaast is het management van SFC bewust dat er op een navolgbare en verantwoordelijke manier omgegaan moet worden met financiële middelen; immers handelt het bedrijf met een uitputbare hoeveelheid vreemde valuta en is er een hoge mate van liquiditeit vereist om het bestaan van het bedrijf in de toekomst te kunnen garanderen. Het treasury statuut is onlosmakelijk verbonden met de AOIB, het is daarom noodzakelijk dit product pas wordt opgesteld wanneer de AO weer aansluit op de werkelijkheid \citep{watisonderzoek,buunk,financiering}.
 
 \subsection{De doelstelling}
-Zoals hiervoor beschreven wordt de bestaande AOIB bijgewerkt waarbij vervolgens een zogenaamde treasury statuut wordt opgesteld (zie paragraaf \ref{def:treasury}). Het statuut komt voort uit de AOIB. 
-Om deze twee producten op te leveren wordt eerst het interne betrouwbaarheidssysteem onder de loep genomen waarbij vooral gekeken wordt naar de goede en slechte aspecten van de organisatorische inrichting. De geüpdatete AOIB en het treasury statuut zijn 'deliverables', dat wil zeggen dat zij voortvloeien uit de opdracht zelf. In het treasury statuut legt het management verantwoording af over het kas- en geldmiddelenbeheer en dus ook over hoe FX-risico wordt bestreden. Deze aflegging van de verantwoording over de financiële middelen moet in lijn zijn met de getroffen, organisatorische maatregelen en de manier waarop het management idealistisch de geldstromen bewaakt en monitort. Het management geeft zelf aan dat het opstellen van dit statuut een hoognodig deel is van het onderzoek, aangezien er al een bestaande AO aanwezig is en dat het kasmanagement, hoewel grotendeels geautomatiseerd, nog niet formeel is vastgelegd. Bij de uitwerking van de update van de AO wordt door de organisatorische veranderingen (beschreven in paragraaf \ref{beschr:problemen}) ook rekening gehouden met nieuwe afdelingen, veranderde afdelingen, nieuwe organisatiestructuren, afdelingen die gericht zijn op nieuwe producten en nieuwe markten.
+Zoals hiervoor beschreven wordt de bestaande AOIB bijgewerkt waarbij vervolgens een zogenaamde treasury statuut wordt opgesteld (zie paragraaf \ref{def:treasury}). Deze twee producten zijn \textit{deliverables}, met andere woorden: deze producten komen niet direct voort uit de centrale vraagstelling. Aan de hand van de uitwerking van het interne betrouwbaarheidssysteem kan de AOIB geüpdatet worden en het statuut opgesteld. {\color{red}Beide deliverables zijn te vinden in bijlage XX en XX.} 
+Het interne betrouwbaarheidssysteem wordt onder de loep genomen waarbij vooral gekeken wordt naar de sterke en zwakke aspecten van de organisatorische inrichting. In het treasury statuut legt het management verantwoording af over het kas- en geldmiddelenbeheer en dus ook over hoe FX-risico wordt bestreden. Deze aflegging van de verantwoording over de financiële middelen moet in lijn zijn met de getroffen, organisatorische maatregelen en de manier waarop het management idealistisch de geldstromen bewaakt en monitort. Het management geeft zelf aan dat het opstellen van dit statuut een hoognodig deel is van het onderzoek, aangezien er al een bestaande AO aanwezig is en dat het kasmanagement, hoewel grotendeels geautomatiseerd, nog niet formeel is vastgelegd. Bij de uitwerking van de update van de AO wordt door de organisatorische veranderingen (beschreven in paragraaf \ref{beschr:problemen}) ook rekening gehouden met nieuwe afdelingen, veranderde afdelingen, nieuwe organisatiestructuren, afdelingen die gericht zijn op nieuwe producten en nieuwe markten.
 
-Bij deze ontwerpende opdracht is aan het einde van het afstudeertraject de AOIB bijgewerkt en in brede zin in kaart gebracht. Nadenken over de structuren en maatregelen, zoals dat in een AO-beschrijving gebeurt, is voor veel bedrijven belangrijk om niet alleen te kunnen groeien in de toekomst, maar ook om het bestaan van de onderneming enigszins te kunnen garanderen en om te toetsen of er niet ongeoorloofd middelen uit de onderneming wegvloeien.
+Het doel is om de bestaande AOIB in brede zin in kaart te brengen. Nadenken over de structuren en maatregelen, zoals dat in een AO-beschrijving gebeurt, is voor veel bedrijven belangrijk om niet alleen te kunnen groeien in de toekomst, maar ook om het bestaan van de onderneming enigszins te kunnen garanderen en om te toetsen of er niet ongeoorloofd middelen uit de onderneming wegvloeien.
 
-Belangrijk om in gedachten te houden bij deze opdracht is dat deze opdracht zowel intern als extern is gericht. Intern wordt verslag gedaan over de administratieve organisatie en deze wordt geüpdatet. Het is dus niet de bedoeling dat derden dit document voor handen krijgen. Het op te stellen treasury statuut is echter wel bedoeld voor derden want het is een verantwoording van het management over hoe er wordt omgegaan met financiële middelen. Stakeholders kunnen met dit document helderheid krijgen op het valutabeheer van de onderneming. Bij de uitwerking van deze twee deelproducten moet de bedoelde doelgroep wel in het oog worden gehouden.
-
-Om deze twee producten goed in kaart te brengen worden interviews en enquêtes gehouden met zowel unitmanagers (UMO's) en assistenten. Het doel hiervan is om de werkelijk aanwezige AO in kaart te brengen. Bij de vraagstelling moet op een zo'n objectieve en neutrale mogelijke manier gekeken worden hoe deze AO per afdeling is ingericht.
+\newpage
 
 \subsection{De hoofdvraag}
 Op basis van het voorgaande wordt voor het onderzoek de volgende hoofdvraag geformuleerd:
