--- a/bibliografie.bib
+++ b/bibliografie.bib
@@ -143,7 +143,7 @@
 @techreport{sfcreglement,
     title = {{Personeelsreglement}},
     year = {2013},
-    author = {{Seafood Connection B.V.}},
+    author = {{Seafood Connection}},
     institution = {Seafood Connection},
     address = {Urk}
 }
