--- a/Hoofdstukken/Dk-Bedrijfsachtergrond.tex
+++ b/Hoofdstukken/Dk-Bedrijfsachtergrond.tex
@@ -1,7 +1,14 @@
 %Dit is een verkorte versie, doel is om alles op 1 pagina te krijgen
 
 \chapter{Bedrijfsachtergrond}
-Opgericht in 1995, door huidig CEO J. (Jan) Kaptijn en wijlen C. (Chris) Goos met het innovatieve idee om een geselecteerd assortiment visproducten aan te bieden over de hele wereld zonder zelf ook maar een enkele visverwerkingsband te moeten aanschaffen. Seafood Connection werkt nauw samen met landen over de hele wereld om lokaal visproducten aan te kunnen bieden met een hoge kwaliteitsstandaard. Deze standaard wordt gegarandeerd door contacten van het bedrijf zelf, grondige controles uit te laten voeren bij de leveranciers op locatie. Daarnaast wordt het productie- en verwerkingsproces gehouden aan hoge Europese standaarden als IFS, BRC, MSC en HACCP. \citep{sfcwebsite,sfcreglement}
+Opgericht in 1995, door huidig CEO J. (Jan) Kaptijn en wijlen C. (Chris) Goos met het innovatieve idee om een geselecteerd assortiment visproducten aan te bieden over de hele wereld zonder zelf ook maar een enkele visverwerkingsband te moeten aanschaffen. Seafood Connection werkt nauw samen met landen over de hele wereld om lokaal visproducten aan te kunnen bieden met een hoge kwaliteitsstandaard. Deze standaard wordt gegarandeerd door contacten van het bedrijf zelf, grondige controles uit te laten voeren bij de leveranciers op locatie en het productie- en verwerkingsproces te houden aan hoge Europese standaarden als IFS, BRC, MSC en HACCP. \citep{sfcreglement}
+
+\begin{figure}[!h]
+    \centering
+    \includegraphics[width=0.83\textwidth]{kaart}
+    \caption{Alle kantoren van Seafood Connection en moederbedrijf Maruha Nichiro \citep{sfcwebsite}}
+    \label{fig:kantorensfc}
+\end{figure}
 
 Seafood Connection is een handelsbedrijf in diverse diepvries visproducten met daarnaast in beperkte mate doorstroom van eigen goederen met een eenvoudig, technisch omzettingsproces \citep{aoibsfc}. Voor de verschillende bedrijfsactiviteiten fungeert Seafood Connection als:
 
@@ -11,7 +18,14 @@ Seafood Connection is een handelsbedrijf in diverse diepvries visproducten met d
     \item In zeer beperkte mate dienstverlening aan derden (door commissie op verkopen aan derden)
 \end{enumerate}
 
-Seafood Connection is vijftig gemotiveerde werknemers sterk. Het kantoor op Urk vervult alle bedrijfsfuncties grotendeels op één locatie; er zijn enkele medewerkers werkzaam bij een klein, lokaal productieproces, namelijk bij de zagerij van Coldstore Urk waar een groot deel van de voorraad van SFC zich bevindt. De organisatie heeft vier niveaus: het managementteam (MT) dat de strategie formuleert, de unitmanagers (UMO) die hun afdelingen aansturen, managers die het aanspreekpunt zijn voor hun deelprocessen in de verschillende afdelingen, én assistants die de afdelingen ondersteunen met verschillende werkzaamheden. SFC is een lijn-staforganisatie met een gedeelde P-, G-, en M-indeling opgedeeld in de afdelingen: inkoop, opslag, verkoop, finance, ICT and production, HRM, compliance, en marketing verdeeld over vier segmenten: wholesale, retail, industry, en group companies (geografisch beheer). \citep{quickscan}
+Seafood Connection is vijftig gemotiveerde werknemers sterk. Het kantoor op Urk vervult alle bedrijfsfuncties grotendeels op één locatie; er zijn enkele medewerkers werkzaam bij een klein, lokaal productieproces, namelijk bij de zagerij van Coldstore Urk waar een groot deel van de voorraad van SFC zich bevindt. De organisatie heeft vier niveaus: het managementteam (MT) dat de strategie formuleert, de unitmanagers (UMO) die hun afdelingen aansturen, managers die het aanspreekpunt zijn voor hun deelprocessen in de verschillende afdelingen, én assistants die de afdelingen ondersteunen met verschillende werkzaamheden. SFC is een lijn-staforganisatie met een gedeelde P-, G-, en M-indeling opgedeeld in de afdelingen: inkoop, opslag, verkoop, finance, ICT and production, HRM, compliance, en marketing verdeeld over vier segmenten: wholesale, retail, industry, en group companies (geografisch beheer). \citep{quickscan,sfcreglement}
 
 \label{beschr:activiteiten}
-Het is voor een bedrijf als SFC aantrekkelijk om relatief veel schulden op zich te nemen ten opzichte van haar bezittingen. SFC koopt grootschalig in voor verscheidene producten op een groot aantal markten. Dit betekent dat wanneer een grote hoeveelheid visproducten worden gekocht, het gebruikelijk is dat de levering doorgaans pas na één maand plaatsvindt. Na levering blijft de voorraad doorgaans twee maanden op voorraad voor het verkocht wordt, waarbij betaling van deze order één tot twee maanden na de aflevering van deze goederen plaatsvindt. De duur van deze fasen verschilt per markt en product maar de strekking hier van is dat Seafood Connection in feite pas haar geld terug ontvangt tussen vier tot zes maanden na inkoop van het product. 
+Het is voor een bedrijf als SFC aantrekkelijk om relatief veel schulden op zich te nemen ten opzichte van haar bezittingen. SFC koopt grootschalig in voor verscheidene producten op een groot aantal markten. Dit betekent dat wanneer een grote hoeveelheid visproducten worden gekocht, het gebruikelijk is dat de levering doorgaans pas na één maand plaatsvindt. Na levering blijft de voorraad doorgaans twee maanden op voorraad voor het verkocht wordt, waarbij betaling van deze order één tot twee maanden na de aflevering van deze goederen plaatsvindt. De duur van deze fasen verschilt per markt en product maar de strekking hier van is dat Seafood Connection in feite pas haar geld terug ontvangt tussen vier tot zelfs zes maanden na inkoop van het product. \citep{quickscan}
+
+\begin{figure}[!h]
+    \centering
+    \includegraphics[width=\textwidth]{liquiditeitsrisico}
+    \caption{Liquiditeitsrisico en druk op de schulden gedurende het bedrijfsproces}
+    \label{fig:liquiditeitsrisico}
+\end{figure}
